api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service 
spec:
  selector:
    app : api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
