api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: api.20.74.70.205.nip.io
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 3000
